La till liten kommentar samt python version i readme (trots att jag har python verison i python-version hehe)

--- a/report.ipynb
+++ b/report.ipynb
@@ -359,6 +359,8 @@
     "\n",
     "**Notes:** Since having our print in our \"checking_power_of_that_t_test\" we get some ugly prints when running our plot, since our plot uses the function repeatedly.\n",
     "\n",
+    "**Conclusion:** Here we actually calculate the difference that our t-test will find with a power of 80%, so we find that we will find a difference of 2,5 mmHg.\n",
+    "\n",
     "**Source:** The one and only Joakim -> https://www.youtube.com/watch?v=tAW2Komgulk&t=4164s"
    ]
   },
